# PyProbs

./: .gitignore  LICENSE  PyProbs.py  README.md  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini
.github/: FUNDING.yml
.github/workflow/: tests.yml
.github/workflows/: python-publish.yml  tests.yml
docs/: PyProbs.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/src/: api-documentation.rst  examples.rst  installation.rst  license.rst
src/: PyProbs.py
src/pyprobs/: __init__.py  exceptions.py  probability.py
tests/: test_probability.py
