[metadata]
name = pyprobs
description = A module that returns True or False output based on given probability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OmerFI/PyProbs
author = Ömer Furkan İşleyen
author_email = omergumushane@hotmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = probability, chance
project_urls =
    Source=https://github.com/OmerFI/PyProbs
    Documentation=https://pyprobs.readthedocs.io
    Bug Tracker=https://github.com/OmerFI/PyProbs/issues

[options]
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.3
    tox>=3.26.0

# TODO: Add extra requirements for linting, docs, etc. as needed
